@@ -1,3 +1,4 @@
+1/30/2011 Added VoidFunction1.Null, a no-op implementation with no side effects
 1/30/2011 Rewrote PropertyCheckBox and PropertyRadioButton to use more general parameter type SettableProperty instead of concrete subclass Property
 1/25/2011 Set the slider in IntensitySlider to paint ticks, see #2682 for motivation and details.
 1/24/2011 Added getters and setters to Time Speed Slider classes
